--- a/.i3/config
+++ b/.i3/config
@@ -32,10 +32,10 @@ bindsym XF86Launch6 exec i3lock && systemctl suspend
 
 # Switch Workspaces
 bindsym $mod+Tab workspace back_and_forth
-bindsym $mod+1 workspace 1: Main
-bindsym $mod+2 workspace 2: Web
-bindsym $mod+3 workspace 3: Media
-bindsym $mod+4 workspace 4: Vbox
+bindsym $mod+1 workspace Main
+bindsym $mod+2 workspace Web
+bindsym $mod+3 workspace Media
+bindsym $mod+4 workspace Vbox
 bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
@@ -44,10 +44,10 @@ bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
 # Move Window to Workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to worksapce 3
-bindsym $mod+Shift+4 move container to workspace 4
+bindsym $mod+Shift+1 move container to workspace Main
+bindsym $mod+Shift+2 move container to workspace Web
+bindsym $mod+Shift+3 move container to worksapce Media
+bindsym $mod+Shift+4 move container to workspace Vbox
 bindsym $mod+Shift+5 move container to workspace 5
 bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
@@ -112,18 +112,18 @@ for_window [class="^.*"] border pixel 1
 font pango:terminus 10
 
 # Window Colors
-# Class					Border	Bkgrnd	Text	Indicator
+# Class				Border	Bkgrnd	Text	Indicator
 client.focused			#224257	#224257	#ffffff	#3f8ac2
-client.focused_inactive	#333333	#5f676a	#ffffff	#484e50
+client.focused_inactive		#333333	#5f676a	#ffffff	#484e50
 client.unfocused		#333333	#292d2e	#888888	#000000
 client.urgent			#cl0004	#900000	#ffffff	#900000
 
-# Hotkey Volume Control
+# Media Key Volume Control
 bindsym XF86AudioMute exec /usr/bin/pulseaudio-ctl mute
 bindsym XF86AudioLowerVolume exec /usr/bin/pulseaudio-ctl down
 bindsym XF86AudioRaiseVolume exec /usr/bin/pulseaudio-ctl up
 
-# F-Key Volume Control
+# F-Row Volume Control
 bindsym $mod+F10 exec /usr/bin/pulseaudio-ctl mute
 bindsym $mod+F11 exec /usr/bin/pulseaudio-ctl down
 bindsym $mod+F12 exec /usr/bin/pulseaudio-ctl up
@@ -148,6 +148,11 @@ bar {
 		background #383838
 #		statusline #dcdcdc
 #		separator #0d1820
+# 		Class              Border	Bkgrnd	Text	Indicator
+        	focused_workspace  #383838 	#383838	#ff55ff
+		active_workspace   #383838  	#383838	#00aaaa	
+		inactive_workspace #383838	#383838	#00aaaa	
+#		urgent_workspace   #e4e4e4 	#121212	#e4e4e4
 	}
 }
 
