--- a/.nanorc
+++ b/.nanorc
@@ -1,69 +1,1 @@
-bind M-U copytext all
-
-include /home/grandtheftjiujitsu/.nano/apacheconf.nanorc
-include /home/grandtheftjiujitsu/.nano/asciidoc.nanorc
-include /home/grandtheftjiujitsu/.nano/asm.nanorc
-include /home/grandtheftjiujitsu/.nano/awk.nanorc
-include /home/grandtheftjiujitsu/.nano/c.nanorc
-include /home/grandtheftjiujitsu/.nano/cmake.nanorc
-include /home/grandtheftjiujitsu/.nano/coffeescript.nanorc
-include /home/grandtheftjiujitsu/.nano/colortest.nanorc
-include /home/grandtheftjiujitsu/.nano/conf.nanorc
-include /home/grandtheftjiujitsu/.nano/csharp.nanorc
-include /home/grandtheftjiujitsu/.nano/css.nanorc
-include /home/grandtheftjiujitsu/.nano/cython.nanorc
-include /home/grandtheftjiujitsu/.nano/dot.nanorc
-include /home/grandtheftjiujitsu/.nano/email.nanorc
-include /home/grandtheftjiujitsu/.nano/fish.nanorc
-include /home/grandtheftjiujitsu/.nano/fortran.nanorc
-include /home/grandtheftjiujitsu/.nano/gentoo.nanorc
-include /home/grandtheftjiujitsu/.nano/git.nanorc
-include /home/grandtheftjiujitsu/.nano/gitcommit.nanorc
-include /home/grandtheftjiujitsu/.nano/glsl.nanorc
-include /home/grandtheftjiujitsu/.nano/go.nanorc
-include /home/grandtheftjiujitsu/.nano/groff.nanorc
-include /home/grandtheftjiujitsu/.nano/haml.nanorc
-include /home/grandtheftjiujitsu/.nano/html.nanorc
-include /home/grandtheftjiujitsu/.nano/ini.nanorc
-include /home/grandtheftjiujitsu/.nano/inputrc.nanorc
-include /home/grandtheftjiujitsu/.nano/java.nanorc
-include /home/grandtheftjiujitsu/.nano/javascript.nanorc
-include /home/grandtheftjiujitsu/.nano/js.nanorc
-include /home/grandtheftjiujitsu/.nano/json.nanorc
-include /home/grandtheftjiujitsu/.nano/keymap.nanorc
-include /home/grandtheftjiujitsu/.nano/kickstart.nanorc
-include /home/grandtheftjiujitsu/.nano/ledger.nanorc
-include /home/grandtheftjiujitsu/.nano/lisp.nanorc
-include /home/grandtheftjiujitsu/.nano/lua.nanorc
-include /home/grandtheftjiujitsu/.nano/makefile.nanorc
-include /home/grandtheftjiujitsu/.nano/man.nanorc
-include /home/grandtheftjiujitsu/.nano/markdown.nanorc
-include /home/grandtheftjiujitsu/.nano/mpdconf.nanorc
-include /home/grandtheftjiujitsu/.nano/mutt.nanorc
-include /home/grandtheftjiujitsu/.nano/nanorc.nanorc
-include /home/grandtheftjiujitsu/.nano/nginx.nanorc
-include /home/grandtheftjiujitsu/.nano/patch.nanorc
-include /home/grandtheftjiujitsu/.nano/peg.nanorc
-include /home/grandtheftjiujitsu/.nano/perl.nanorc
-include /home/grandtheftjiujitsu/.nano/php.nanorc
-include /home/grandtheftjiujitsu/.nano/pkg-config.nanorc
-include /home/grandtheftjiujitsu/.nano/pkgbuild.nanorc
-include /home/grandtheftjiujitsu/.nano/po.nanorc
-include /home/grandtheftjiujitsu/.nano/pov.nanorc
-include /home/grandtheftjiujitsu/.nano/privoxy.nanorc
-include /home/grandtheftjiujitsu/.nano/python.nanorc
-include /home/grandtheftjiujitsu/.nano/reST.nanorc
-include /home/grandtheftjiujitsu/.nano/rpmspec.nanorc
-include /home/grandtheftjiujitsu/.nano/ruby.nanorc
-include /home/grandtheftjiujitsu/.nano/sed.nanorc
-include /home/grandtheftjiujitsu/.nano/sh.nanorc
-include /home/grandtheftjiujitsu/.nano/sql.nanorc
-include /home/grandtheftjiujitsu/.nano/systemd.nanorc
-include /home/grandtheftjiujitsu/.nano/tex.nanorc
-include /home/grandtheftjiujitsu/.nano/vala.nanorc
-include /home/grandtheftjiujitsu/.nano/vi.nanorc
-include /home/grandtheftjiujitsu/.nano/xml.nanorc
-include /home/grandtheftjiujitsu/.nano/xresources.nanorc
-include /home/grandtheftjiujitsu/.nano/yaml.nanorc
-include /home/grandtheftjiujitsu/.nano/yum.nanorc
-include /home/grandtheftjiujitsu/.nano/zshrc.nanorc
+/home/grandtheftjiujitsu/.nanorc
