--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,4 +1,15 @@
 [Settings]
-gtk-color-scheme = "base_color:#162127\nbg_color:#080808\ntooltip_bg_color:#0A0811\nselected_bg_color:#4C5761\ntext_color:#A9D3F6\nfg_color:#ccdfe3\ntooltip_fg_color:#73A4CD\nselected_fg_color:#ffffff\nlink_color:#345676\nbg_color_dark:#000000\nfg_color_dark:#dfdbd2"
+gtk-color-scheme = "base_color:#141213\nbg_color:#141213\ntooltip_bg_color:#343434\nselected_bg_color:#00B9F2\ntext_color:#eeeeee\nfg_color:#eeeeee\ntooltip_fg_color:#eeeeee\nselected_fg_color:#eeeeee\nlink_color:#1497dd\nbg_color_dark:#272727\nfg_color_dark:#eeeeee"
 gtk-auto-mnemonics = 1
-gtk-toolbar-icon-size = GTK_ICON_SIZE_SMALL_TOOLBAR
+
+
+
+
+
+
+
+
+
+
+
+
