--- a/.nanorc
+++ b/.nanorc
@@ -46,8 +46,8 @@ include "~/.nano/nginx.nanorc"
 include "~/.nano/ocaml.nanorc"
 include "~/.nano/patch.nanorc"
 include "~/.nano/peg.nanorc"
-include "~/.nano/perl.nanorc"
 include "~/.nano/perl6.nanorc"
+include "~/.nano/perl.nanorc"
 include "~/.nano/php.nanorc"
 include "~/.nano/pkgbuild.nanorc"
 include "~/.nano/pkg-config.nanorc"
@@ -64,6 +64,7 @@ include "~/.nano/sed.nanorc"
 include "~/.nano/sh.nanorc"
 include "~/.nano/sls.nanorc"
 include "~/.nano/sql.nanorc"
+include "~/.nano/swift.nanorc"
 include "~/.nano/systemd.nanorc"
 include "~/.nano/tcl.nanorc"
 include "~/.nano/tex.nanorc"
